--- a/BankApi.Api/appsettings.json
+++ b/BankApi.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": ""
+    "Default": "Server=(localdb)\\mssqllocaldb;Database=BankAppDb;Trusted_Connection=True;"
   }
 }
