--- a/BankApi.Core/BankApp.Core.csproj
+++ b/BankApi.Core/BankApp.Core.csproj
@@ -18,4 +18,10 @@
     <PackageReference Include="System.Linq.Async" Version="6.0.1" />
   </ItemGroup>
 
+	<ItemGroup>
+		<AssemblyAttribute Include ="System.Runtime.CompilerServices.InternalsVisibleTo">
+			<_Parameter1>BankApp.Tests</_Parameter1>
+		</AssemblyAttribute>
+	</ItemGroup>
+
 </Project>
