--- a/BankApi.Infrastructure/BankApp.Infrastructure.csproj
+++ b/BankApi.Infrastructure/BankApp.Infrastructure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -20,5 +20,9 @@
   <ItemGroup>
     <ProjectReference Include="..\BankApi.Core\BankApp.Core.csproj" />
   </ItemGroup>
-
+	<ItemGroup>
+		<AssemblyAttribute Include ="System.Runtime.CompilerServices.InternalsVisibleTo">
+			<_Parameter1>BankApp.Tests</_Parameter1>
+		</AssemblyAttribute>
+	</ItemGroup>
 </Project>
