--- a/BankApp.Infrastructure/BankApp.Infrastructure.csproj
+++ b/BankApp.Infrastructure/BankApp.Infrastructure.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BankApi.Core\BankApp.Core.csproj" />
+    <ProjectReference Include="..\BankApp.Core\BankApp.Core.csproj" />
   </ItemGroup>
 	<ItemGroup>
 		<AssemblyAttribute Include ="System.Runtime.CompilerServices.InternalsVisibleTo">
